--- a/config/locales/en-AU.yml
+++ b/config/locales/en-AU.yml
@@ -6810,7 +6810,7 @@ en-AU:
     errors: 
       4xx_feedback: "Click here to tell us what you were looking for."
       feedback: "Click here to tell us what happened"
-    help: Help
+    help: Help!
     show_me_where: "Show Me Where"
     switch_views: "Switch Views"
   locales: 
