--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -6930,7 +6930,7 @@ en-GB:
     errors: 
       4xx_feedback: "Click here to tell us what you were looking for."
       feedback: "Click here to tell us what happened"
-    help: Help
+    help: Help!
     show_me_where: "Show me where"
     switch_views: "Switch views"
   locales: 
